<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mad.weimiao.subaruorder.MainActivity">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:layout_weight="0">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            <TextView
                android:text="@string/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:textStyle="bold" />

                <EditText
                android:hint="@string/userNameHint"
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1" />

                <TextView
                    android:text="@string/nameVisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold|italic"
                    />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/visibleSwitch" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:text="@string/model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textStyle="bold" />
                <Spinner
                    android:layout_span="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/modelSpinner"
                    android:entries="@array/models"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="3dp"
                    android:textStyle="bold" />
                <RadioGroup
                    android:layout_span="3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/yearRadio">

                    <RadioButton
                        android:text="@string/R2015"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/R_2015"
                        android:layout_weight="1" />

                    <RadioButton
                        android:text="@string/R2016"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/R_2016"
                        android:layout_weight="1" />

                    <RadioButton
                        android:text="@string/R2017"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/R_2017"
                        android:layout_weight="1" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:text="@string/condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold" />
                <ToggleButton
                    android:layout_span="3"
                    android:text="@string/ToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:textOn="@string/toggle_on"
                    android:textOff="@string/toggle_off"
                    android:id="@+id/cdtToggleButton"
                    tools:ignore="RtlHardcoded" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:text="@string/color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textStyle="bold" />
                <Spinner
                    android:layout_span="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/colors"
                    android:id="@+id/colorSpinner" />
            </TableRow>
    </TableLayout>

    <TextView
        android:text="@string/Acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">


        <CheckBox
            android:text="@string/CheckBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox1"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <CheckBox
            android:text="@string/CheckBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox2"
            android:layout_weight="1" />

        <CheckBox
            android:text="@string/CheckBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox3"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:text="@string/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button"
        android:layout_weight="0"
        android:textStyle="bold"
        android:onClick="placeOrder"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/brz"
        android:id="@+id/carImage"
        android:layout_weight="1"
        android:contentDescription="@string/imageDescription" />

    <TextView
        android:text="@string/orderifo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/orderText"
        android:layout_weight="0" />
</LinearLayout>

